--- a/lesson3/blog-details.html
+++ b/lesson3/blog-details.html
@@ -25,19 +25,98 @@
         </div>
     </header>
 
-    <section class="blog-details">
+    <section class="blog-details-bg">
     </section>
 
-    <section class="articles-blog">
+    <section id="blog" class="articles-blog">
         <div class="container">
 
-            <!-- 30 августа доделаю, не успел))) -->
+            <div class="articles-blog__wrapper">
+                <!-- <div class="blog-list">
+                    <div class="blog-item">
+                        <h2 class="blog-item__title">Let’s Get Solution for Building
+                            Construction Work</h2>
+                        <div class="blog-item__img"></div>
+                        <div class="blog-item__info">
+                            <span class="blog-item__date">26 December,2022</span>
+                            <nav class="breadcrumb blog-item__breadcrumb-right">
+                                <ul class="breadcrumb__items">
+                                    <li class="breadcrumb__list breadcrumb__link__small">
+                                        <a class="breadcrumb__link" href="#">Home</a></li>
+                                    <li class="breadcrumb__list breadcrumb__link__small">
+                                        <a class="breadcrumb__link" href="#">Blog</a></li>
+                                    <li class="breadcrumb__list breadcrumb__link__small">
+                                        <a class="breadcrumb__link" href="#">Decore</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <p class="blog-item__text">
+                            Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpmaximus.posuere in.Contrary
+                            to popular belief.There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injecthumour, or randomised words which
+                            don't look even slightly believable. Embarrassing hidden in the middle of text. All the
+                            Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.
+                        </p>
+                    </div>
+                    <div class="blog-details">
+                        <div class="blog-details__info">
+                            <div class="blog-details__info-limiter">
+
+                                <h3 class="blog-details__info-symbol">,,</h3>
+
+                            </div>
+                            <p class="blog-details__info-text">The details are not the details. They make the design.
+                            </p>
+
+                        </div>
+                        <h2 class="blog-details__title">Design sprints are great</h2>
+                        <p class="blog-details__text">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae
+                            turpmaximus.posuere in.Contrary to popular belief.There are many variations of passages of
+                            Lorem Ipsum available, but the majority have suffered.</p>
+                        <ul class="blog-details__list">
+                            <li class="blog-details__item">Contrary to popular belief.There are many variations of
+                                passages of Lorem Ipsum available, but the majority have suffered.</li>
+                            <li class="blog-details__item">Contrary to popular belief.There are many variations of
+                                passages of Lorem Ipsum available, but the majority have suffered.</li>
+                            <li class="blog-details__item">Contrary to popular belief.There are many variations of
+                                passages of Lorem Ipsum available, but the majority have suffered.</li>
+                        </ul>
+                        <div class="blog-details__img"></div>
+                        <p class="blog-details__text">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae
+                            turpmaximus.posuere in.Contrary to popular belief.There are many variations of passages of
+                            Lorem Ipsum available, but the majority have suffered.</p>
+
+
+                    </div>
+
+                </div> -->
+                <div class="blog-list">
+                    <div @click="showDetails(index)" style="margin-bottom: 60px;" v-for="(blog, index) in blogArrs"
+                        :key="index" v-show="blog.filterList">
+                        <blog-list :title="blog.title" :img="blog.img" :text="blog.info" subtitle="blog.subtitle"
+                            imgDesign="blog.imgDesign" v-show="blog.listShow">
+                        </blog-list>
+                        <blog-details v-show="blog.show"></blog-details>
+                    </div>
+                </div>
+
+                <div class="tags">
+                    <h2 class="tags__title">Tags</h2>
+                    <div class="tags__wrapper">
+                        <button class="tags__button" @click="filterList('Kitchen')">Kitchen</button>
+                        <button class="tags__button" @click="filterList('Bedroom')">Bedroom</button>
+                        <button class="tags__button" @click="filterList('Building')">Building</button>
+                        <button class="tags__button" @click="filterList('Architecture')">Architecture</button>
+                        <button class="tags__button" @click="filterList('Kitchen Planning')">Kitchen Planning</button>
+                        <button class="tags__button" @click="filterList('Bedroom')">Bedroom</button>
+
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </section>
-
-
-
 
     <footer class="footer">
         <div class="container">
@@ -77,6 +156,84 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/blog-list.js"></script>
+    <script src="./js/blog-details.js"></script>
+    <script>
+        new Vue({
+            el: '#blog',
+
+            data: {
+                blogArrs: [{
+                        title: "#1 Let’s Get Solution for Building Construction Work",
+                        img: "background: url(./img/blog-details/blog-1.png) center/ cover no-repeat",
+                        info: `Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpmaximus.posuere in.Contrary
+                    to popular belief.There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injecthumour, or randomised words which don't look even
+                    slightly believable. Embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                    the Internet tend to repeat predefined chunks as necessary.`,
+                        subtitle: "#1 Design sprints are great",
+                        imgDesign: "background: url(./img/blog-details/block-2.png) center/ cover no-repeat",
+                        show: false,
+                        listShow: true,
+                        filter: ["Kitchen", "Bedroom"],
+                        filterList: true
+                    },
+                    {
+                        title: "#2 Let’s Get Solution for Building Construction Work",
+                        img: "background: url(./img/blog-details/blog-2.png) center/ cover no-repeat",
+                        info: `Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpmaximus.posuere in.Contrary
+                    to popular belief.There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injecthumour, or randomised words which don't look even
+                    slightly believable. Embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                    the Internet tend to repeat predefined chunks as necessary.`,
+                        subtitle: "#2 Design sprints are great",
+                        imgDesign: "background: url(./img/blog-details/block-3.png) center/ cover no-repeat",
+                        show: false,
+                        listShow: true,
+                        filter: ["Building", "Architecture", ],
+                        filterList: true
+                    },
+                    {
+                        title: "#3 Let’s Get Solution for Building Construction Work",
+                        img: "background: url(./img/blog-details/blog-3.png) center/ cover no-repeat",
+                        info: `Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpmaximus.posuere in.Contrary
+                    to popular belief.There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injecthumour, or randomised words which don't look even
+                    slightly believable. Embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                    the Internet tend to repeat predefined chunks as necessary.`,
+                        subtitle: "#3 Design sprints are great",
+                        imgDesign: "block-1",
+                        show: false,
+                        listShow: true,
+                        filter: ["Kitchen Planning", "Bedroom", "Kitchen"],
+                        filterList: true
+                    },
+                ]
+
+
+            },
+            methods: {
+                showDetails(index) {
+                    this.blogArrs[index].show = !this.blogArrs[index].show;
+                    for (let i = 0; i < this.blogArrs.length; i++) {
+                        this.blogArrs[i].listShow = !this.blogArrs[i].listShow;
+
+                    }
+                    this.blogArrs[index].listShow = true;
+                },
+                filterList(info) {
+                    this.blogArrs.forEach((element, index) => {
+                        if (!element.filter.includes(info)) {
+                            this.blogArrs.filterList = false;
+                        }
+
+                    });
+
+                }
+            },
+
+        })
+    </script>
 
 </body>
 
